--- a/hw3/qjshf.html
+++ b/hw3/qjshf.html
@@ -1,1 +1,146 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Homework 3</title>
+    <link rel="stylesheet" href="../css1.css">
+</head>
+<body>
+    <header>
+        <div>
+            <span class="Menu">MENU</span>
+            <div class="header_right">
+                <a href="page2.html" class="About">About</a>
+                <a href="page2.html" class="Projects">Projects</a>
+                <a href="page2.html" class="Services">Services</a>
+            </div>
+        </div>
+    </header>
+    <div class="lawyer">
+        <img src="https://csci571.com/hw/hw3/images/lawyer.jpg">
+        <div class="container">
+            <table class="table">
+                <div class="table_inner">
+                    <tr><td>DON'T WAIT</td></tr>
+                    <tr id="IMPROVE">
+                        <td>
+                            IMPROVE<br>
+                            YOUR BUSINESS<br>
+                            TODAY!
+                        </td>
+                    </tr>
+                    <tr id="GET"><td>- Get your hands on Biz Optima -</td></tr>
+                    <tr>
+                        <td>
+                        <form id="form">
+                            <input id="email" type="email" placeholder="Email"><br>
+                            <input id="button" type="button" value="SIGN UP FOR FREE!">
+                        </form>
+                        </td>
+                    </tr>
+                </div>
+            </table>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div class="flex_container_one">
+            <span>AMAZING FEATURE #1</span>
+            <div class="flex_content_one">
+                <p>Lorem ipsum dolor sit amet. Suspendisse nec eros ut erat facilisis maximus.
+                Consectetur adipiscng elit. Sed malesuada faucibus ex nec ultricies. Donec
+                mattis egestas nisi non pretium. Vestibulum sit amet ornare, commodo orci
+                ut, feugat lorem. In congue et leo in varius.</p>
+            </div>
+        </div>
+        <div class="flex_container_two">
+            <span>AMAZING FEATURE #2</span>
+            <div class="flex_content_two">
+                <p>Lorem ipsum dolor sit amet. Suspendisse nec eros ut erat facilisis maximus.
+                    Consectetur adipiscng elit. Sed malesuada faucibus ex nec ultricies. Donec
+                    mattis egestas nisi non pretium. Vestibulum sit amet ornare, commodo orci
+                    ut, feugat lorem. In congue et leo in varius.</p>
+            </div>
+        </div>
+        <div class="flex_container_three">
+            <span>AMAZING FEATURE #3</span>
+            <div class="flex_content_three">
+                <p>Lorem ipsum dolor sit amet. Suspendisse nec eros ut erat facilisis maximus.
+                    Consectetur adipiscng elit. Sed malesuada faucibus ex nec ultricies. Donec
+                    mattis egestas nisi non pretium. Vestibulum sit amet ornare, commodo orci
+                    ut, feugat lorem. In congue et leo in varius.</p>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <p id="p1">"I COULDN'T HAVE ASKED FOR MORE THAN THIS. BIZ OPTIMA IS THE NEXT KILLER APP."</p>
+        <p id="p2"><b>John Doe</b>, CEO & Founder, Biz Optima</p>
+    </div>
+    <div class="glass">
+        <div class="overlay">
+            <div class="top">
+                <span id="price">PRICES</span><br>
+                <span id="afford">AFFORDABLE FOR EVERYONE</span>
+            </div>
+            <div class="one">
+                <div class="plan">BASIC PLAN</div>
+                <div class="plan_number">
+                    <span>Plan Amazing feature #1</span><br>
+                    <span>Plan Amazing feature #2</span><br>
+                    <span>Plan Amazing feature #3</span><br>
+                    <span>Plan Amazing feature #4</span><br><br>
+                    <div class="money">
+                        <div>$29.99<br>Monthly</div>
+                    </div>
+                    <input class="buy" type="button" value="BUY NOW">
+                </div>
+            </div>
+            <div class="two">
+                <div class="plan">BASIC PLAN</div>
+                <div class="plan_number">
+                    <span>Plan Amazing feature #1</span><br>
+                    <span>Plan Amazing feature #2</span><br>
+                    <span>Plan Amazing feature #3</span><br>
+                    <span>Plan Amazing feature #4</span><br><br>
+                    <div class="money">
+                        <div>$39.99<br>Monthly</div>
+                    </div>
+                    <input class="buy" type="button" value="BUY NOW">
+                </div>
+            </div>
+            <div class="three">
+                <div class="plan">BASIC PLAN</div>
+                <div class="plan_number">
+                    <span>Plan Amazing feature #1</span><br>
+                    <span>Plan Amazing feature #2</span><br>
+                    <span>Plan Amazing feature #3</span><br>
+                    <span>Plan Amazing feature #4</span><br><br>
+                    <div class="money">
+                        <div>$49.99<br>Monthly</div>
+                    </div>
+                    <input class="buy" type="button" value="BUY NOW">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="notebook">
+        <div class="free">
+            <p id="p3">TRY THE BEST APP IN THE MARKET</p>
+            <p id="p4">tell more why your software is amazing and why users need to sign up</p><br>
+            <input class="button" type="button" value="TRY IT FOR FREE">
+        </div>
+    </div>
+    <div class="end">
+        <div class="address">
+            <p id="p5">BIZ OPTIMA</p>
+            <p id="p6">224 Grand Ave, Redono Beach, CA, 90278 310.555.1212 Ext. 3 for Business Needs</p>
+            <div class="photo">
+                <a href="https://www.facebook.com" target="_blank"><img src="https://csci571.com/hw/hw3/images/facebook.png"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="https://csci571.com/hw/hw3/images/twitter.png"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="https://csci571.com/hw/hw3/images/instagram.png"></a>
+                <a href="https://www.youtube.com" target="_blank"><img src="https://csci571.com/hw/hw3/images/youtube.png"></a>
+                <a href="https://www.google.com" target="_blank"><img src="https://csci571.com/hw/hw3/images/googleplus.png"></a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
