--- a/hw3/qjshf.html
+++ b/hw3/qjshf.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Homework 3</title>
-    <link rel="stylesheet" href="../css1.css">
+    <link rel="stylesheet" href="uioo.css">
 </head>
 <body>
     <header>
