--- a/hw3/qwexcz.html
+++ b/hw3/qwexcz.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-  
+  <p id="1">first paragraph</p>
+    <p id="2">second paragraph</p>
+    <p id="3">third paragraph</p>
 </body>
 </html>
