--- a/hw3/qjshf.html
+++ b/hw3/qjshf.html
@@ -10,9 +10,9 @@
         <div>
             <span class="Menu">MENU</span>
             <div class="header_right">
-                <a href="page2.html" class="About">About</a>
-                <a href="page2.html" class="Projects">Projects</a>
-                <a href="page2.html" class="Services">Services</a>
+                <a href="qwexcz.html" class="About">About</a>
+                <a href="qwexcz.html" class="Projects">Projects</a>
+                <a href="qwexcz.html" class="Services">Services</a>
             </div>
         </div>
     </header>
