--- a/hw3/qwexcz.html
+++ b/hw3/qwexcz.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        p{
+            margin-top: 0;
+            font-size: 25px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-  <p id="1">first paragraph</p>
-    <p id="2">second paragraph</p>
-    <p id="3">third paragraph</p>
+    <p id="1">About</p>
+    <p id="2">Projects</p>
+    <p id="3">Services</p>
 </body>
 </html>
