--- a/hw3/qjshf.html
+++ b/hw3/qjshf.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>MyBiz</title>
-    <link rel="stylesheet" href="uioo.css">
+    <link rel="stylesheet" href="../css1.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 <body>
-<header>
-    <div>
+<div>
+    <div class="pos0">
         <span class="Menu">MENU</span>
         <div class="header_right">
-            <a href="qwexcz.html" target="_blank" class="About">About</a>
-            <a href="qwexcz.html" target="_blank" class="Projects">Projects</a>
-            <a href="qwexcz.html" target="_blank" class="Services">Services</a>
+            <a href="page2.html" target="_blank" class="About">About</a>
+            <a href="page2.html" target="_blank" class="Projects">Projects</a>
+            <a href="page2.html" target="_blank" class="Services">Services</a>
         </div>
     </div>
-</header>
+</div>
 <div class="lawyer">
     <img src="https://csci571.com/hw/hw3/images/lawyer.jpg" alt="">
     <div class="container">
