--- a/hw3/qjshf.html
+++ b/hw3/qjshf.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MyBiz</title>
-    <link rel="stylesheet" href="../css1.css">
+    <link rel="stylesheet" href="uioo.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 <body>
@@ -11,9 +11,9 @@
     <div class="pos0">
         <span class="Menu">MENU</span>
         <div class="header_right">
-            <a href="page2.html" target="_blank" class="About">About</a>
-            <a href="page2.html" target="_blank" class="Projects">Projects</a>
-            <a href="page2.html" target="_blank" class="Services">Services</a>
+            <a href="qwexcz.html" target="_blank" class="About">About</a>
+            <a href="qwexcz.html" target="_blank" class="Projects">Projects</a>
+            <a href="qwexcz.html" target="_blank" class="Services">Services</a>
         </div>
     </div>
 </div>
