--- a/hw3/qjshf.html
+++ b/hw3/qjshf.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>MyBiz</title>
     <link rel="stylesheet" href="uioo.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
 <div>
@@ -21,7 +21,6 @@
     <img src="https://csci571.com/hw/hw3/images/lawyer.jpg" alt="">
     <div class="container">
         <table class="table">
-            <div class="table_inner">
                 <tr id="wait"><td><span>DON'T WAIT</span></td></tr>
                 <tr id="IMPROVE">
                     <td>
@@ -39,7 +38,6 @@
                         </form>
                     </td>
                 </tr>
-            </div>
         </table>
     </div>
 </div>
@@ -82,9 +80,6 @@
 <div class="pos">
     <div class="glass"></div>
     <div class="overlay">
-            <input class="buy1" type="button" value="BUY NOW">
-            <input class="buy2" type="button" value="BUY NOW">
-            <input class="buy3" type="button" value="BUY NOW">
         <div class="top">
             <p id="price">PRICES</p>
             <p id="afford">AFFORDABLE FOR EVERYONE</p>
@@ -99,6 +94,7 @@
                 <div class="money">
                     <div>$29.99<br>Monthly</div>
                 </div>
+                <input class="buy1" type="button" value="BUY NOW">
             </div>
         </div>
         <div class="two">
@@ -111,6 +107,7 @@
                 <div class="money">
                     <div>$39.99<br>Monthly</div>
                 </div>
+                <input class="buy2" type="button" value="BUY NOW">
             </div>
         </div>
         <div class="three">
@@ -123,6 +120,7 @@
                 <div class="money">
                     <div>$49.99<br>Monthly</div>
                 </div>
+                <input class="buy3" type="button" value="BUY NOW">
             </div>
         </div>
     </div>
