--- a/hw3/qwexcz.html
+++ b/hw3/qwexcz.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
     <style>
         p{
             margin-top: 0;
