--- a/hysby.html
+++ b/hysby.html
@@ -19,7 +19,7 @@ th, td {
     <td>Link to Homework #2</td>
   </tr>
   <tr>
-    <td><a href= "https://hyang836.github.io/hw3/qjshf.html">Link to Homework #3</a></td>
+    <td><a href= "https://hyang836.github.io/hw3/hw33/qjshf.html">Link to Homework #3</a></td>
     <td><a href= "ScrambleThisName.html">Link to Homework #4</a></td>
   </tr>
   <tr>
