--- a/hysby.html
+++ b/hysby.html
@@ -24,7 +24,8 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #5</td>
-    <td><a href= "ScrambleThisName.html">Link to Homework #6</a></td>
+    <td><a href= "https://myapp-200881.wl.r.appspot.com/">Link to Homework #6</a><br>
+        <a href= "https://myapp-200881.wl.r.appspot.com/app?address=%7B%22street%22%3A%22university+of+southern+california%22%2C%22city%22%3A%22LA%22%2C%22state%22%3A%22CA%22%7D">Link to Json</td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
