--- a/hysby.html
+++ b/hysby.html
@@ -29,7 +29,8 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #7</td>
-    <td><a href= "ScrambleThisName.html">Link to Homework #8</a></td>
+    <td><a href= "https://sampleapp-200881.wl.r.appspot.com">Link to Homework #8</a><br>
+        <a href= "https://weather-back-200881.wl.r.appspot.com/get?location=33.4484,-112.0740"></td>
   </tr>
   <tr>
     <td>Link to Homework #9</td>
