--- a/hysby.html
+++ b/hysby.html
@@ -25,12 +25,12 @@ th, td {
   <tr>
     <td>Link to Homework #5</td>
     <td><a href= "https://myapp-200881.wl.r.appspot.com/">Link to Homework #6</a><br>
-        <a href= "https://myapp-200881.wl.r.appspot.com/app?address=%7B%22street%22%3A%22university+of+southern+california%22%2C%22city%22%3A%22LA%22%2C%22state%22%3A%22CA%22%7D">Link to Json</td>
+        <a href= "https://myapp-200881.wl.r.appspot.com/app?address=%7B%22street%22%3A%22university+of+southern+california%22%2C%22city%22%3A%22LA%22%2C%22state%22%3A%22CA%22%7D">Link to Json-hw6</td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
     <td><a href= "https://sampleapp-200881.wl.r.appspot.com">Link to Homework #8</a><br>
-        <a href= "https://weather-back-200881.wl.r.appspot.com/get?location=33.4484,-112.0740"></td>
+        <a href= "https://weather-back-200881.wl.r.appspot.com/get?location=33.4484,-112.0740">Link to Json-hw8</td>
   </tr>
   <tr>
     <td>Link to Homework #9</td>
