--- a/hysby.html
+++ b/hysby.html
@@ -33,7 +33,7 @@ th, td {
         <a href= "https://weather-back-200881.wl.r.appspot.com/get?location=33.4484,-112.0740">Link to Json-hw8</td>
   </tr>
   <tr>
-    <td>Link to Homework #9</td>
+    <td><a href= "https://hw9-backend-200881.wl.r.appspot.com/get?location=33.4484,-112.0740">Link to Homework #9</a></td>
     <td>Link to Homework #10</td>
   </tr>
   </table>
